--- a/styles.css
+++ b/styles.css
@@ -67,13 +67,13 @@ h3 {
   font-size: 4rem;
 }
 
-@media (min-width: 601px) {
+@media (min-width: 801px) {
   .mobileTitleImage {
     display: none;
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .titleImage {
     display: none;
   }
@@ -107,7 +107,7 @@ img {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .newMusicTitle {
     font-size: 5rem;
   }
@@ -172,6 +172,10 @@ img {
 
 /* Videos */
 
+#Videos {
+  padding: 30px 0 0;
+}
+
 #Videos img {
   display: block;
   margin-left: auto;
@@ -181,6 +185,10 @@ img {
 }
 
 /* Connect */
+
+#Connect {
+  padding: 30px 0 0;
+}
 
 #Connect button {
   border:none;
