--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,10 @@ h3 {
 /* NAVBAR */
 
 .navbar {
-  height: 70px;
+  height: 85px;
   width: 100%;
   background-color: white;
+  z-index: 1;
 }
 
 .navbar a {
@@ -59,6 +60,12 @@ h3 {
   padding: 15px 10px 0 !important;
 }
 
+.sticky {
+  position: fixed;
+  top: 0;
+  opacity:.9;
+}
+
 /* Title */
 .newMusicTitle {
   font-size: 6rem;
@@ -66,6 +73,10 @@ h3 {
 
 .newSingle {
   font-size: 4rem;
+}
+
+.jagLinks {
+  color:white;
 }
 
 @media (min-width: 901px) {
